Fix clicking links causing jumping around to the wrong place
Also minor style and content tweaks

--- a/css/main.styl
+++ b/css/main.styl
@@ -652,6 +652,10 @@ a {
 		padding-bottom: $lh * 0.4375;
 		padding-top: $lh * 0.4375;
 		tab-size: 2;
+
+		a {
+			text-shadow: $internLightGrey 1px 0, $internLightGrey -1px 0;
+		}
 	}
 
 	ul > li {
